public_html/scss/_styles.scss
/* ... */
/* -----------------------------------------
   Footer Styles
----------------------------------------- */
footer {
    background-color: $dark-green;
    text-align: center;
    font-size: 1.2rem;
    padding: 2rem 0;
    margin-top: rem-calc(60);

    .inline-list {

        a {
            display: inline-block;
            width: 2rem;
            height: 2rem;
            background-color: darken($dark-green, 5%);
            border-radius: 2px;
            font-size: 1.5rem;
            color: $white-color;
            text-align: center;
            line-height: 35px;
            margin: 0 3px 0 0;
        }

        &.social {
            margin-bottom: rem-calc(16);

            a{
                line-height: 26px;
            }
        }
    }

    .contact {
        list-style-type: none;
        margin: 0;
        text-align: left;
        color: #fff;

        li {
            margin-bottom: 0;
            text-align: center;
            width: 100%;

            p {
                padding: 0 1%;
                display: inline-block;
                margin-bottom: 8px;
            }
        }

        i {
            background-color: darken($dark-green, 5%);
            color: #fff;
            margin: 0;
            padding: 0;
            position: relative;
            text-align: center;
            border-radius: 50%;
            width: 3rem;
            height: 3rem;
            line-height: 3rem;
            font-size: 1.75rem;
            display: inline-block;
        }

        a {
            color: $white-color;
            padding-left: 6px;
            padding-top: 9px;
            text-align: left;
            display: inline-block;

            br {
                display: none;
            }

            &:hover,
            &:focus {
                color: $white-color;
                text-decoration: underline;
            }
        }
    }

    .copywrite {
        font-size: 0.875rem;
        margin: 0 0 1rem 0;
        color: $white-color;

        a {
            color: $white-color;

            &:hover,
            &:focus {
                color: $white-color;
                text-decoration: underline;
            }
        }
    }

    .about {
        font-size: 0.875rem;
        margin: 0 0 1rem 0;
        color: $white-color;
    }

    .footer-links a {
        list-style: none;
        font-weight: normal;
        color: $white-color;
        margin: 0;
        font-size: 0.875rem;

        &:hover,
        &:focus {

            span {
                text-decoration: underline;
            }
        }

        &::before {
            content: "\2022";
            padding: 0 0.4rem 0 0.2rem;
        }

        &:first-child::before {
            content: "";
            padding: 0 0.2rem 0 0.2rem;
        }
    }

    .social {
        text-align: center;
        margin: 0;
    }

    .logo {
        color: $white-color;
    }
}

/* ---------------------------------------------------
   Media Queries for mobile / tablets responsiveness
----------------------------------------------------- */

@media #{$small-up} {

    html {
        font-size: 12px;
    }
}

@media #{$small-only} {

    .slider-navigation {
        text-align: center;
        background-color: $dark-green;

        dd {
            display: inline-block;
            float: none;

            a.button.small {
                padding-left: rem-calc(14);
                padding-right: rem-calc(14);
            }
        }
    }
}

@media #{$medium-down} {

    header{

        #logo,
        .fixed #logo {

            a{
                margin-top: 3px;
                width: 92px;
            }
        }

        h3 {
            font-size: rem-calc(14);
            padding: rem-calc(14) rem-calc(20);

            span {
                display: none;
            }
        }
    }
}

@media #{$medium-up} {

    html {
        font-size: 14px;
    }

    .featured-content-row {

        .orbit-container {
            margin-top: -43px;
        }

        .slider-navigation {
            padding: 0 44px;

            dd {
                border-left: 1px solid darken($dark-green, 5%);

                &:first-child{

                    &::before {
                        content: "";
                        display: block;
                        position: absolute;
                        top: 0;
                        left: rem-calc(-42);
                        border-left: rem-calc(44) solid transparent;
                        border-top: rem-calc(47) solid $dark-green;
                        height: rem-calc(44);
                        width: rem-calc(24);
                    }
                }

                &:last-child {

                    &::after {
                        content: "";
                        display: block;
                        position: absolute;
                        top: 0;
                        right: rem-calc(-42);
                        border-right: rem-calc(44) solid transparent;
                        border-top: rem-calc(47) solid $dark-green;
                        height: rem-calc(44);
                        width: rem-calc(24);
                    }
                }
            }
        }
    }

    footer {

        .inline-list {
            &.social {
                a{
                    line-height: 35px;
                }
            }
        }

        .contact {
            li {
                p {
                    min-width: 65%;

                    i{
                        float: left;
                    }

                    a {
                        padding-top: 0;
                        float: left;

                        br {
                            display: inherit;
                        }
                    }
                }
            }
        }
    }
}
/* ... */

